Fix #855 -> collapsed side nav + manage code block widths in mobile devices

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -226,7 +226,9 @@ select {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 28.8rem auto;
+  @media (min-width: 800px) {
+    grid-template-columns: 28.8rem auto;
+  }
 }
 
 :focus {
